[gd_scene load_steps=5 format=2]

[ext_resource path="res://combat_arena/combat_gui/CombatGui.gd" type="Script" id=1]
[ext_resource path="res://combat_arena/combat_gui/textbox/TextBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://combat_arena/combat_gui/turn_panel/TurnPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://combat_arena/combat_gui/action_menu/ActionMenu.tscn" type="PackedScene" id=4]

[node name="CombatGui" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
grow_vertical = 0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" parent="MarginContainer" instance=ExtResource( 2 )]

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 472.0
custom_constants/separation = 8

[node name="TurnPanel" parent="MarginContainer2/VBoxContainer" instance=ExtResource( 3 )]
visible = false

[node name="ActionMenu" parent="MarginContainer2/VBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_left = 0.0
margin_top = 354.0
margin_right = 72.0
margin_bottom = 464.0

[node name="PlayerPanels" type="HBoxContainer" parent="MarginContainer2/VBoxContainer"]
visible = false
margin_top = 464.0
margin_right = 624.0
margin_bottom = 464.0
size_flags_vertical = 8
custom_constants/separation = 8
[connection signal="closed" from="MarginContainer/TextBox" to="." method="_on_TextBox_closed"]
[connection signal="selected_action" from="MarginContainer2/VBoxContainer/ActionMenu" to="." method="_on_ActionMenu_selected_action"]
